# ldz-desktop

./: .editorconfig  .env  .envrc  .gitignore  LICENSE.md  README.md  Record.py  Sync.py  blank_data.xlsx  build.py  compile.py  compile_mac.py  compile_win.py  config.xlsx  data.xlsx  default.nix  flake.nix  freeze.py  install.sh  pyproject.toml  requirements.txt  result  run.sh  setup.py  shell.nix  treefmt.nix  typos.toml  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: build.yaml  build.yml  deploy.yml
Record.app/Contents/: Info.plist
Sync.app/Contents/: Info.plist
checks/pre-commit/: default.nix
configs/: AS&D.xlsx  EMPTY.xlsx  MASA.xlsx
data/: users.csv
data/admin/: asnd_reg.csv  masa_reg.csv
ldz/: __init__.py  __main__.py  main.py  source.py  utils.py
legacy/: RecordV1.py  RecordV2.py  RecordV3.py  RecordV4.py  SyncV1.py  config.xlsx
shells/default/: default.nix
shells/poetry/: default.nix
source/: __init__.py  admin.py  app.py  auth.py  data.py  db.py  imports.py  main.py  user.py
source/static/: _main.css  chart.css  charts.css  colours.css  flash.css  form.css  main.css  responsive.css  side.css  sidenav.css  styles.css  top.css  topnav.css
source/templates/: _base.html  _layout.html  asnd_emb.html  asnd_reg.html  base.html  edit.html  home.html  login.html  masa_emb.html  masa_reg.html  settings.html
source/views/: admin.py  auth.py  data.py  home.py  main.py  (+1 more)
src/: Record.py  Sync.py  __init__.py  app.py  compile.py  compiler.py  config.py  config.xlsx  db.py  imports.py  path_utils.py  requirements.txt  source.py  source_bootstrap.py  utils.py
test_data/: 1.xlsx  2.xlsx  Output.xlsx  output.xlsx
(+86 files in other folders)
