[tool.poetry]
name = "ldz"
version = "1.4"
description = "App for use in the University of Surrey's LDZ"
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tkcalendar = "^1.6.1"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
platformdirs = "^4.1.0"

[tool.poetry.scripts]
ldz = "ldz:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
