[tool.poetry]
name = "ldz-apps"
version = "0.1.0"
description = "App for use in the University of Surrey's LDZ"
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
Flask-SQLAlchemy = "^3.1.1"
Flask-Login = "^0.6.3"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
