[tool.poetry]
name = "ldz"
version = "2.0"
description = "App for use in the University of Surrey's LDZ"
license = "MIT"
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ElliottSullingeFarrall/ldz-desktop"
packages = [{ include = "src", to = "ldz" }]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
tkcalendar = "^1.6.1"
pandas = "^1.5.3"
numpy = "^1.26.4"
openpyxl = "^3.1.2"
platformdirs = "^4.1.0"
pandas-stubs = "^2.2.2.240603"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.3.0"

[tool.poetry.scripts]
ldz = "src:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
